--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm test
-    - run: npm run coveralls
+    - run: npm run coverage
   
   coverage:
     name: Coveralls
